reorganização, colocar variaveis a privado, inicio fsm, inicio gui